--- a/initTsProject/toolkip_templates/webpack.config.js.template
+++ b/initTsProject/toolkip_templates/webpack.config.js.template
@@ -2,8 +2,9 @@ const path = require('path');
 const TerserPlugin = require('terser-webpack-plugin');
 
 module.exports = {
+    mode: "development",
     entry: './src/index.ts',
-    devtool: 'inline-source-map',
+
     module: {
         rules: [
             {
@@ -18,7 +19,7 @@ module.exports = {
     },
     output: {
         filename: '${fname}.js',
-        path: path.resolve(__dirname, 'compiled_js'),
+        path: path.resolve(__dirname, "dist"),
         ${library}
     },
     optimization: {
@@ -31,5 +32,12 @@ module.exports = {
                 }
             })
         ]
-    }
+    },
+
+    devServer: {
+        contentBase: [path.join(__dirname, './')],
+        publicPath: '/dist/',
+        compress: true,
+        port: 5050
+  }
 };	
