start react lib version

--- a/initTsProject/react_templates/tsconfig.json.template
+++ b/initTsProject/react_templates/tsconfig.json.template
@@ -6,7 +6,7 @@
 		"strictNullChecks": true,
 		"moduleResolution": "node",
 		"allowJs": true,
-		"noEmit": true,
+		"${emitType}": true,
 		"strict": true,
 		"esModuleInterop": true,
 		"jsx": "react",
