--- a/initTsProject/react_templates/package.json.template
+++ b/initTsProject/react_templates/package.json.template
@@ -5,12 +5,12 @@
   "author": "Kip Price",
   "license": "MIT",
 
-  "main": "dist/${fname}",
-  "module": "dist/${fname}",
+  "main": "dist/",
+  "module": "dist/",
   "types": "typings/index",
 
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "webpack serve",
     "build": "webpack",
     "test": "npx jest -- -t .test.ts"
   }
